alteração de imagem

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                      </article>
 
                      <article class="card">
-                        <img src="img/floresta 5 (1).jpg" alt="imagem de gato" width="100%">
+                        <img src="img/floresta 4.jpg" alt="imagem de gato" width="100%">
                           <h3>Meu Trabalho</h3>
                           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, ipsam!</p>
                           <button class="btn-green">Ver mais</button>
